fixed bug with svg mask on IE11

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -254,7 +254,6 @@ Slider
 
 .cd-round-mask {
 	/* wrapper for the svg mask elements */
-	position: absolute;
 	top: 0;
 	left: 0;
 	pointer-events: none;
